--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
   <div class="page">
     <div class="header">
-      <img src="/assets/Coma Orgハicos 2.png" alt="Logo">
+      <img src="/assets/logo.png" alt="Logo">
       <h1>Entre em contato coma gente!!</h1>
     </div>
     <div class="container">
