Update title and favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Contatos | Coma Orgânicos</title>
+  <link rel="icon" type="image/png" href="./assets/favicon.png"/>
   <style>
     * {
       margin: 0;
@@ -62,7 +63,7 @@
   <div class="page">
     <div class="header">
       <img src="./assets/logo.png" alt="Logo">
-      <h1>Entre em contato coma gente!!</h1>
+      <h1>Entre em contato com a gente!!</h1>
     </div>
     <div class="container">
       <a href="https://www.instagram.com/comaorganicos" class="a-box-button" target="_blank">
