--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           Instagram
         </div>
       </a>
-      <a href="https://www.facebook.com/Coma-Org%C3%A2nicos-101841321674400" class="a-box-button" target="_blank">
+      <a href="https://www.facebook.com/comaorganicoss" class="a-box-button" target="_blank">
         <div class="box-button">
           <img src="" alt="">
           Facebook
